crates/core/tests/proc/ty/forbidden_field.stderr
error: Using the name 'new' can cause conflicts in generated code.
 --> tests/proc/ty/forbidden_field.rs:5:5
  |
5 |     new: u8,
  |     ^^^
