crates/core/tests/proc/ty/forbidden_field.rs
use interoptopus::ffi_type;

#[ffi_type]
struct Foo {
    new: u8,
}

fn main() {}
